--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest "
   },
   "keywords": [],
   "author": "Lucas Biazon Palma",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "directories": {
@@ -19,6 +21,7 @@
   },
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "fastify": "^4.27.0",
     "prisma": "^5.15.0"
   }
